--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "bootstrap": "^5.3.3",
+    "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "swal": "^0.1.0",
-    "sweetalert2": "^11.7.32",
+    "sweetalert2": "^11.6.13",
     "typical": "^7.1.1"
   },
   "devDependencies": {
