--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.14.1",
+    "react-router-dom": "^6.26.2",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "swal": "^0.1.0",
@@ -38,6 +38,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "@vitejs/plugin-react-swc": "^3.5.0",
     "postcss": "^8.4.25",
     "tailwindcss": "^3.3.2",
     "vite": "^4.5.0"
